<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="https://maven.apache.org/POM/4.0.0" xmlns:xsi="https://www.w3.org/2001/XMLSchema-instance"
    xsi:schemaLocation="https://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">

    <modelVersion>4.0.0</modelVersion>

    <groupId>eu.tneitzel.rmg</groupId>
    <artifactId>remote-method-guesser</artifactId>
    <name>remote-method-guesser</name>
    <packaging>jar</packaging>
    <version>4.4.1</version>
    <description>Identify common misconfigurations on Java RMI endpoints</description>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.source>1.8</maven.compiler.source>
        <maven.compiler.target>1.8</maven.compiler.target>
    </properties>

    <dependencies>

        <dependency>
          <groupId>net.sourceforge.argparse4j</groupId>
          <artifactId>argparse4j</artifactId>
          <version>0.9.0</version>
        </dependency>

        <dependency>
            <groupId>commons-io</groupId>
            <artifactId>commons-io</artifactId>
            <version>2.11.0</version>
        </dependency>

        <dependency>
            <groupId>org.javassist</groupId>
            <artifactId>javassist</artifactId>
            <version>3.29.2-GA</version>
        </dependency>

        <dependency>
            <groupId>org.yaml</groupId>
            <artifactId>snakeyaml</artifactId>
            <version>1.33</version>
        </dependency>

        <dependency>
            <groupId>org.springframework</groupId>
            <artifactId>spring-remoting</artifactId>
            <version>2.0.8</version>
        </dependency>

    </dependencies>

    <build>

        <sourceDirectory>src</sourceDirectory>

        <resources>
          <resource>
            <directory>src</directory>
            <includes>
                <include>config.properties</include>
            </includes>
          </resource>
          <resource>
            <directory>.</directory>
            <includes>
                <include>resources/wordlists/**</include>
                <include>resources/templates/**</include>
                <include>resources/known-endpoints/**</include>
            </includes>
          </resource>
        </resources>

        <plugins>
          <plugin>
              <artifactId>maven-assembly-plugin</artifactId>
              <executions>
                <execution>
                  <phase>package</phase>
                  <goals>
                    <goal>single</goal>
                  </goals>
                </execution>
              </executions>
              <configuration>
                <finalName>rmg-${project.version}</finalName>
                <archive>
                    <manifest>
                        <mainClass>eu.tneitzel.rmg.Starter</mainClass>
                        <addDefaultImplementationEntries>true</addDefaultImplementationEntries>
                    </manifest>
                    <manifestEntries>
                        <Built-By>
                            Tobias Neitzel (@qtc_de)
                        </Built-By>
                        <Add-Opens>
                            java.base/java.io
                            java.base/java.lang
                            java.base/java.lang.reflect
                            java.base/jdk.internal.misc
                            java.rmi/java.rmi.server
                            java.rmi/sun.rmi.server
                            java.rmi/sun.rmi.transport
                            java.rmi/sun.rmi.transport.tcp
                        </Add-Opens>
                    </manifestEntries>
                </archive>
                <descriptorRefs>
                  <descriptorRef>jar-with-dependencies</descriptorRef>
                </descriptorRefs>
              </configuration>
          </plugin>

          <plugin>
              <artifactId>maven-jar-plugin</artifactId>
              <version>3.2.0</version>
              <executions>
                <execution>
                   <id>default-jar</id>
                   <phase>none</phase>
                </execution>
              </executions>
          </plugin>
        </plugins>

    </build>
</project>
